# cpspot

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
src/: __main__.py  cli.py  core.py  errors.py
tests/: conftest.py  test_core.py
tests/testdata/: raw_data.py  spotify.html  spotify_noentity.html  spotify_playlist.html
